--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body class="sm:dark:bg-[#0f0f0f] dark:bg-black">
+	<body class="sm:dark:bg-[#0f0f0f] dark:bg-black bg-white sm:bg-white">
 		<div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
 	</body>
 </html>
